# almetica

./: .clippy.toml  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  config.yaml.tmpl
.github/workflows/: almetica.yml
benches/: crypt.rs
book/: user-spawning.puml
src/: config.rs  crypt.rs  dataloader.rs  ecs.rs  gameserver.rs  lib.rs  model.rs  networkserver.rs  protocol.rs  web.rs  webserver.rs
src/crypt/: argon2id.rs  password_hash.rs  pike.rs  sha1.rs  streamcipher.rs
src/ecs/: component.rs  dto.rs  event.rs  message.rs  resource.rs  system.rs  tag.rs  world.rs
src/ecs/system/: cleaner.rs  common.rs  connection_manager.rs  event_cleaner.rs  event_handler.rs  event_receiver.rs  event_sender.rs  global.rs  local.rs  ping_pong.rs  settings_manager.rs  user_manager.rs
src/ecs/system/common/: cleaner.rs  message_receiver.rs  shutdown.rs
src/ecs/system/global/: connection_manager.rs  local_world_manager.rs  settings_manager.rs  user_manager.rs  user_spawner.rs
src/ecs/system/local/: user_gateway.rs
src/model/: entity.rs  migrations.rs  repository.rs
src/model/migrations/: 202005132045__account.sql  202005132047__user.sql  202005181025__user_location.sql  V1__account.sql  V2__login_ticket.sql  V3__user.sql
src/model/repository/: account.rs  loginticket.rs  user.rs  user_location.rs
src/protocol/: opcode.rs  packet.rs  serde.rs
src/protocol/packet/: client.rs  server.rs
src/protocol/serde/: de.rs  error.rs  ser.rs
src/web/: response.rs
src/webserver/: request.rs  response.rs
