[package]
name = "almetica"
version = "0.0.1"
authors = ["Almetica <almetica@protonmail.com>"]
edition = "2018"

[dependencies]
aes = "0.3"
base64 = "0.12"
bb8 = "0.4.1"
bb8-postgres = "0.4.0"
byteorder = "1.3"
cfb-mode = "0.3"
clap = { version = "3.0.0-beta.1", features = ["yaml"], git = "https://github.com/clap-rs/clap/" }
chrono = "0.4"
dotenv = "0.15"
flate2 = "1.0"
hex = "0.4"
postgres = { version = "0.17", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.1", features = ["derive"] }
r2d2 = "0.8"
r2d2_postgres = "0.16"
rand = "0.7"
rand_core = "0.5"
refinery = { version = "0.2", features = ["tokio-postgres"]}
rust-argon2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_yaml = "0.8"
shipyard = { version = "0.3", features = ["serde"] }
strum = "0.18"
strum_macros = "0.18"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
tokio-postgres = { version = "0.5", features = ["with-chrono-0_4"] }
tracing = { version ="0.1", features = ["max_level_trace", "release_max_level_info"]}
tracing-log = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
ucs2 = "0.3"
warp = "0.2"

[dev-dependencies]
criterion = "0.3"
criterion-cycles-per-byte = "0.1"
refinery = { version = "0.2", features = ["postgres"]}
regex = "1"
serial_test = "0.4"
tokio = { version = "0.2", features = ["full"] }
tokio-test = "0.2"

[[bench]]
name = "crypt"
harness = false

[profile.dev]
opt-level = 0

[profile.release]
lto = true

[profile.bench]
lto = true
