[package]
name = "almetica"
version = "0.0.1"
authors = ["Almetica <almetica@protonmail.com>"]
edition = "2018"

[dependencies]
aes = "0.3"
async-std = { version = "1.5", features = ["attributes", "unstable"]}
base64 = "0.12"
byteorder = "1.3"
cfb-mode = "0.3"
clap = { git = "https://github.com/clap-rs/clap/", features = ["yaml"] }
chrono = "0.4"
dotenv = "0.15"
flate2 = "1.0"
futures-channel = "0.3"
hex = "0.4"
http-types = "1.2"
rand = "0.7"
rand_core = "0.5"
refinery = { version = "0.2", features = ["tokio-postgres"]}
rust-argon2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_yaml = "0.8"
shipyard = { version = "0.4", features = ["serde"] }
strum = "0.18"
strum_macros = "0.18"
sqlx = { version = "0.3", features = ["chrono", "macros", "postgres"] }
thiserror = "1.0"
tide = "0.7"
tracing = { version ="0.1", features = ["max_level_trace", "release_max_level_info"]}
tracing-log = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
ucs2 = "0.3"
# Only used until refinery supports sqlx directly
tokio-postgres = "0.5.3"
tokio = "0.2.19"

[dev-dependencies]
criterion = "0.3"
criterion-cycles-per-byte = "0.1"
refinery = { version = "0.2", features = ["postgres"]}
regex = "1"
tokio = { version = "0.2", features = ["full"] }
tokio-test = "0.2"

[[bench]]
name = "crypt"
harness = false

[profile.dev]
opt-level = 1

[profile.release]
lto = true

[profile.bench]
lto = true
