[package]
name = "almetica"
version = "0.0.3"
authors = ["Almetica <almetica@protonmail.com>"]
edition = "2018"

[dependencies]
aes = "0.3"
anyhow = "1.0"
async-macros = "2.0"
async-std = { version = "1.6", features = ["attributes", "unstable"] }
base64 = "0.12"
byteorder = "1.3"
cfb-mode = "0.3"
clap = { git = "https://github.com/clap-rs/clap/", features = ["yaml"] }
chrono = "0.4"
dotenv = "0.15"
flate2 = "1.0"
hex = "0.4"
http-types = "2.0"
lazy_static = "1.4"
rand = "0.7"
rand_core = "0.5"
regex = "1.3"
rust-argon2 = "0.8"
rust-embed= { version = "5.5", features = ["compression"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_yaml = "0.8"
shipyard = { version = "0.4", features = ["serde", "parallel"] }
strum = "0.18"
strum_macros = "0.18"
sqlx = { version = "0.3", features = ["chrono", "macros", "json" ,"postgres"] }
thiserror = "1.0"
tide = "0.9"
tracing = { version ="0.1", features = ["max_level_trace", "release_max_level_info"] }
tracing-log = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
ucs2 = "0.3"

[dev-dependencies]
criterion = "0.3"
criterion-cycles-per-byte = "0.1"

[[bench]]
name = "crypt"
harness = false

[profile.release]
lto = true

[profile.bench]
lto = true

# Patch is needed until smol 0.1.11
[patch.crates-io]
smol = { git = "https://github.com/stjepang/smol", rev = "b1b5986ef74168bbd91443545fd0a88af114a427", optional = true }
